fixed video alignment

--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -60,8 +60,7 @@
 .vidContainer{
     display: flex;
     justify-content: center;
-    width: 100%; 
-    height: 100%;
-    margin-top: 2vh; 
-    margin-left: 2vw; 
+    align-items: center;
+    width: 50vw; 
+    height: 50vh; 
 }
